Fixed grid-template-rows to have two values of 150px. Fixed the issue of images being cut off

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
+.header {
+  background-color: aliceblue;
+}
 .container {
   display: grid;
-  width: 1200px;
-  grid-template-columns: minmax(300px, 300px) 300px 300px;
-  grid-template-rows: 150px 150px 50px;
+  width: 100%;
+  grid-template-columns: 300px 300px 300px;
+  grid-template-rows: 150px 150px;
   grid-gap: 5px;
   margin-top: 20px;
 }
@@ -12,5 +15,5 @@
   object-fit: cover;
 }
 .vertical {
-  grid-row: span 2;
+  grid-row: span 3;
 }
